refactor: Replace Collectors.toList() with Stream.toList() for improved readability and maintainability; remove deprecated response classes